--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  text-align: center;
+  text-align: center; 
+}
+
+.Content {
+  margin-right: 25%;
+  margin-left: 25%;
 }
 
 .App-logo {
@@ -9,7 +14,7 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 50px;
   padding: 20px;
   color: white;
 }
